[tool.poetry]
name = "duplicate-detector-gradio"
version = "0.1.0"
description = "Gradio приложение для поиска дубликатов в Excel файлах"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^5.6.0"
pandas = "^2.0.0"
openpyxl = "^3.1.0"
unidecode = "^1.3.6"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 